terraform/terraformSecurityGroupOracle.tf
resource "aws_security_group" "tomcatOracleSample_oracle" {
  name = "oracleDockerEC2_oracle"
  description = "oracleDockerEC2 - SSH and Oracle Access"
  ingress {
    protocol = "tcp"
    from_port = 22
    to_port = 22
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  ingress {
    protocol = "tcp"
    from_port = 1521
    to_port = 1521
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  ingress {
    protocol = "tcp"
    from_port = 8080
    to_port = 8080
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  tags {
    Name = "oracleDockerEC2 Oracle"
  }
}
